--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -30,7 +29,7 @@ button:focus-visible {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: pink;
+  background-color: #ffc0cb;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -44,4 +43,8 @@ button:focus-visible {
 .greeting{
   text-align: center;
   margin-top: 100px;
+}
+
+.navBack{
+  background-color: pink;
 }
